# fastapi-boiler

./: pyproject.toml
app/: crud.py  main.py  schemas.py
