[tool.poetry]
name = "gql"
version = "0.1.0"
description = ""
authors = ["Asish Binu"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
black = "^22.6.0"
flake8 = "^4.0.1"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
